Resolve onhover flicker issue in Chrome by adding bottom margin to SVG tree view canvas

--- a/static/css/main-bootstrap.css
+++ b/static/css/main-bootstrap.css
@@ -1252,6 +1252,7 @@ td.explain {
 div#canvas {
    position: relative;
    overflow: visible;
+   margin-bottom: 80px;
 }
 
 div#canvas svg {
